--- a/react-rental-prop-search-app/client/src/components/nav/style.css
+++ b/react-rental-prop-search-app/client/src/components/nav/style.css
@@ -8,6 +8,7 @@
 .navbar {
   background: #b3e0e8;
   position: relative;
+  font-family: "Rubik", sans-serif;
 }
 
 .nav-item {
